Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16473

WITH statement throws 'no database selected' error

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.3.7, 10.2(EOL), 10.3(EOL)
    • 10.2.17
    • Optimizer - CTE
    • None
    • Windows

    Description

      • Create a table `user`.`users` with a couple of columns.
      • Execute, without having selected a database (through USE statement) the following query:
        WITH
        abc AS (SELECT * FROM user.users)
        SELECT * FROM abc
      • Now you will get the error '1046 No database selected'.

      On MySQL you don't get this error so I guess it only happens on MariaDB.

      Attachments

        Issue Links

          Activity

            People

              igor Igor Babaev (Inactive)
              user2180613 Remy Fox
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 4h 25m
                  3d 4h 25m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.