sql/sql_parse.cc
@@ -139,6 +139,7 @@ static bool execute_show_status(THD *, TABLE_LIST *);
 static bool check_rename_table(THD *, TABLE_LIST *, TABLE_LIST *);
 
 const char *any_db="*any*";	// Special symbol for check_access
+const char *no_db="*none*";     // Used when no default db is set
 
 const LEX_STRING command_name[257]={
   { C_STRING_WITH_LEN("Sleep") },           //0
